// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtistAddComponent should save 1`] = `
{
  "email": "artist@email.org",
  "genres": null,
  "id": undefined,
  "name": "NAME",
  "picture": undefined,
  "pictureType": undefined,
  "stageName": "STAGE_NAME",
}
`;

exports[`ArtistEditComponent should update 1`] = `
{
  "email": "artist-upsert-request@email.org",
  "genres": null,
  "id": "ID",
  "name": "NAME",
  "picture": undefined,
  "pictureType": undefined,
  "stageName": "STAGE_NAME",
}
`;
